k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-service
  namespace: devsu-demo
spec:
  type: LoadBalancer
  selector:
    app: demo-devops-nodejs
  ports:
    - name: http
      port: 80
      targetPort: 8000
